# demo-test

./: CLAUDE.md
trading_system/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
trading_system/config/: prometheus.yml
trading_system/src/trading_system/: __init__.py
trading_system/src/trading_system/data/: __init__.py
trading_system/src/trading_system/execution/: __init__.py  orders.py  routing.py
trading_system/src/trading_system/monitoring/: __init__.py  alerts.py  metrics.py
trading_system/src/trading_system/risk/: __init__.py  limits.py  portfolio.py  position.py
trading_system/src/trading_system/strategies/: __init__.py  base.py
trading_system/tests/: test_setup.py
